--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
         google()
         jcenter()
     }
+    repositories {
+        mavenCentral()
+    }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath 'com.google.gms:google-services:4.3.4'
