--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,19 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Paypal
+    //Paypal
+    implementation('com.paypal.sdk:paypal-android-sdk:2.15.3')
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
+
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
+    implementation 'io.paperdb:paperdb:2.7.1'
+    implementation 'com.github.rey5137:material:1.2.2'
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'com.stepstone.apprating:app-rating:2.0.0'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
@@ -53,7 +65,7 @@ dependencies {
 
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:design:23.1.0'
